# VPS

./: LICENSE  README.md
dynamic_analysis/: profiling.cpp
ida_export/: ida_export.py
ida_export/export/: ssa_export.proto  ssa_export.py  ssa_export_pb2.py
ida_export/lib/: __init__.py  back.py  config.py  forward.py  graph_helper.py  helper.py  types.py
ida_export/lib/shovel/: block.py  cfg.py  instruction.py  operands.py
ida_export/lib/shovel/arch/: __init__.py  meta.py  tricore.py  x64.py
ida_export/marx/: export.py
static_analysis/: CMakeLists.txt
static_analysis/include/: amd64_ssa.h  backtrace_analysis.h  backtrace_analysis_boost.h  binary_cps.h  block.h  block_semantics.h  engels.h  engels_boost.h  expression.h  function.h  function_xrefs.h  icall_analysis.h  icalls.h  instruction_backtrace_intra.h  object_allocations.h  object_allocations_gt.h  ssa.h  ssa_block.h  ssa_export.pb.h  ssa_instruction.h  ssa_operand.h  translator.h  vcall.h  vcall_backtrace_lightweight.h  vcall_types.h  vex.h  vtable_backtrace_analysis.h  vtable_file.h
static_analysis/patch/: heap_allocation_patch.diff
static_analysis/src/: amd64_ssa.cpp  backtrace_analysis.cpp  backtrace_analysis_boost.cpp  binary_cps.cpp  block.cpp  block_semantics.cpp  engels.cpp  engels_boost.cpp  expression.cpp  function.cpp  function_xrefs.cpp  icall_analysis.cpp  icalls.cpp  instruction_backtrace_intra.cpp  main.cpp  new_operators.cpp  object_allocations.cpp  object_allocations_gt.cpp  overwrite_analysis.cpp  ssa.cpp  ssa_block.cpp  ssa_export.pb.cc  ssa_instruction.cpp  ssa_operand.cpp  state.cpp  translator.cpp  vcall.cpp  vcall_backtrace_lightweight.cpp  vex.cpp  vtable_backtrace_analysis.cpp  vtable_file.cpp  vtable_hierarchy.cpp  vtable_update.cpp  vtv_vcall_gt.cpp
(+3 files in other folders)
